--- a/sonar-project.properties
+++ b/sonar-project.properties
@@ -1,5 +1,7 @@
 sonar.projectKey=BetjaderOD_Lamda_Examen
 sonar.organization=betjaderod
+sonar.python.version=3.9
+
 
 # This is the name and version displayed in the SonarCloud UI.
 #sonar.projectName=Lamda_Examen
